// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`<ActiveIntentItem/> should display active intent item with the confirm and reject buttons 1`] = `
<div
  class="dropdownItemWrapper"
>
  <div
    class="dropdownItemLabel"
  >
    <span
      class="info"
    />
    <span
      class="action"
    >
      <span
        class="dropdownButton"
      >
        <i
          class="confirm icon material-icons"
        >
          done
        </i>
      </span>
      <span
        class="dropdownButton"
      >
        <i
          class="reject icon material-icons"
        >
          close
        </i>
      </span>
    </span>
    <span
      class="label"
    >
      discount/request
    </span>
  </div>
  <div
    class="description"
    title="A request for a discount"
  >
    A request for a discount
  </div>
</div>
`;

exports[`<ActiveIntentItem/> should display active intent item with the confirmed icon and the reject button 1`] = `
<div
  class="dropdownItemWrapper"
>
  <div
    class="dropdownItemLabel"
  >
    <span
      class="info"
    >
      <i
        class="material-icons mr-2 confirmedInfo"
        id="discount-request-1-info"
      >
        check_circle_outline
      </i>
    </span>
    <span
      class="action"
    >
      <span
        class="dropdownButton"
      >
        <i
          class="reject icon material-icons"
        >
          close
        </i>
      </span>
    </span>
    <span
      class="label"
    >
      discount/request
    </span>
  </div>
  <div
    class="description"
    title="A request for a discount"
  >
    A request for a discount
  </div>
</div>
`;

exports[`<ActiveIntentItem/> should display active intent item with the confirmed icon and the reject button 2`] = `
<div
  class="tooltip-inner"
  role="tooltip"
>
  The intent has been confirmed for this message.
</div>
`;

exports[`<ActiveIntentItem/> should display the active intent with only the reject button 1`] = `
<div
  class="dropdownItemWrapper"
>
  <div
    class="dropdownItemLabel"
  >
    <span
      class="info"
    />
    <span
      class="action"
    >
      <span
        class="dropdownButton"
      >
        <i
          class="reject icon material-icons"
        >
          close
        </i>
      </span>
    </span>
    <span
      class="label"
    >
      discount/request
    </span>
  </div>
  <div
    class="description"
    title="A request for a discount"
  >
    A request for a discount
  </div>
</div>
`;
